--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -7,7 +7,7 @@ footer {
   background: $--dark-blue;
   color: $--input;  
   flex-shrink: $--unset;
-  font-size: $--bread-text;
+  font-size: 14px;
   letter-spacing: $--default-letter-spacing;
   line-height: .5rem;
   padding: 2rem 0 1.5rem;
