--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -31,7 +31,7 @@ fieldset {
 }
 
 form {
-    margin: 2.5rem auto 5rem;
+    margin: 2.5rem auto 2rem;
     max-width: 500px;
 }
 
@@ -48,7 +48,7 @@ input, select, textarea {
     border: $--black-border;
     box-sizing: border-box;
     display: inline-block; /* is this line necessary? */
-    margin: 1rem 0 1.25rem;
+    margin: 1rem 0 1.5rem;
     padding: .5rem 1rem;
     width: $--default-layout;
 }
@@ -131,6 +131,7 @@ select {
 
 select {
     appearance: none;
+    background-color: white;
     background-image: url('../../assets/icons/dropbtn.svg');
     background-repeat: no-repeat;
     background-position-x: 97.5%;
