--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -63,7 +63,7 @@
     font-size: 14px;
     letter-spacing: 0.075rem;
     margin-top: 2.5rem;
-    padding: .25rem 1rem;
+    padding: .75rem 1rem;
     width: auto;
 }
 
@@ -74,6 +74,7 @@
 
 @media (max-width: $--tablet-screen) {
     .note, .message-box {
+        margin-top: 1rem;
         padding: .75rem 1rem 2rem;
     }
     .post, .inbox-msg {
