--- a/src/sass/partials/ui/_buttons.scss
+++ b/src/sass/partials/ui/_buttons.scss
@@ -9,31 +9,11 @@ button {
     margin: 1rem 0 0;
     padding: 1rem;
     text-transform: uppercase;
-    transition: .25s;
+    transition: .5s;
     width: 100%;
-}
   
-button:hover {
-    background: $--dark-blue;
-    border: $--blue-border;
-}
-
-.sendbtn {
-    background: $--blue;
-    border: 2px solid $--blue;
-    color: $--input;
-    cursor: pointer;
-    font-size: $--default-text;
-    font-weight: bold;
-    letter-spacing: .1rem;
-    margin: 1rem 0 0;
-    padding: 1rem;
-    text-transform: uppercase;
-    transition: .25s;
-    width: 100%;
-}
-  
-.sendbtn:hover {
-    background: $--dark-blue;
-    border: $--blue-border;
+    &:focus, &:hover {
+        background: $--dark-blue;
+        border: $--blue-border;
+    }
 }
