--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import "partials/dashboard";
 @import "partials/forms";
 @import "partials/gallery";
+@import "partials/layout";
 @import "partials/slider";
 @import "partials/typography";
 @import "partials/variables";
