--- a/src/sass/partials/ui/_about.scss
+++ b/src/sass/partials/ui/_about.scss
@@ -16,8 +16,55 @@
 .sub h2 {
     line-height: 1.25rem;
 }
+
+/* BIO SECTION FROM ABOUT PAGE */
+.about {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 9rem;
+    justify-content: center;
+    margin: 0rem 0rem 4rem;
+}
+  
+.bio {
+    margin: 0 auto;
+    max-width: 1000px;
+}
+  
+.portrait {
+    height: 275px;
+    object-fit: cover;
+    width: 200px;
+}
+  
+.signature {
+    margin-bottom: 2rem;
+    width: 125px;
+}
+  
+.what, .who {
+    margin-bottom: 2.5rem;
+}
+  
+article, i {
+    letter-spacing: $--default-letter-spacing;
+    line-height: $--default-line-height;
+}
+  
+article {
+    font-size: $--bread-text;
+}
+  
+i {
+    font-family: $--primary-font;
+    font-size: 18px;
+}
   
 @media only screen and (max-width: getScreenSize(tablet-width)) {
+    .about {
+        gap: 3rem;
+    }
     .welcome {
       flex-direction: column-reverse;
       margin: 2rem auto 2rem !important;
@@ -38,4 +85,18 @@
     }
 }
 
-/* BIO SECTION FROM ABOUT PAGE */
+@media only screen and (max-width: getScreenSize(mobile-width)) {
+    .about {
+      align-items: unset;
+      flex-direction: column;
+      gap: 1.25rem;
+      margin: 2rem 0rem 3rem;
+    }
+    .intro:first-child {
+      order: 2;
+    }
+    .portrait {
+      height: 100%;
+      width: 100%;
+    }
+}
