--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -1,97 +1,102 @@
-.file-input {
-    color: transparent;
-    cursor: pointer;
-
-    &::before {
-        color: $--blue;
-        content: url('../../assets/icons/upload.png');
-        cursor: pointer;
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        margin: .75rem 0 -1rem;
-    }
-
-    &::-webkit-file-upload-button {
-        visibility: hidden;
-    }
+::-webkit-input-placeholder {    
+    color: $--black !important; 
+    font-family: $--secondary-font; 
+    font-size: 14px;
 }
 
-/* FORM DEFAULT STYLING */
+button, .sendbtn {
+    background: $--blue;
+    border: 2px solid $--blue;
+    color: $--input;
+    cursor: pointer;
+    font-size: $--default-text;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    margin: 1rem 0 0;
+    padding: 1rem;
+    text-transform: uppercase;
+    transition: .25s;
+    width: 100%;
+}
+  
+button:hover, .sendbtn:hover {
+    background: $--dark-blue;
+    border: $--blue-border;
+}
+
+// FORM DEFAULT STYLING
+fieldset {
+    border: none;
+    padding: 0;
+}
+
 form {
-    margin: 2.5rem auto 2rem;
+    margin: 2.5rem auto 5rem;
     max-width: 500px;
+}
 
-    fieldset {
-        border: none;
-        padding: 0;
-    }
-    label {
-        font-weight: bold;
-
-        .optxt {
-            font-size: 15px;
-            font-weight: normal;
-        }
-        // required fields
-        .reqdot {
-            color: $--required;
-            font-weight: bold;
-        }
-    }
-    // two column fields 
-    .rowform {
-        display: flex;
-        flex-direction: row;
-        gap: 2rem;
-    }
+.form-error {
+    background: $--error;
+    border: 1px solid $--required;
+    color: $--required;
+    font-size: 14px;
+    margin: -.5rem 0 1.25rem;
+    padding: .5rem 1rem;
 }
 
 input, select, textarea {
     border: $--black-border;
     box-sizing: border-box;
-    display: inline-block;
-    margin: 1rem 0 1.5rem;
+    display: inline-block; /* is this line necessary? */
+    margin: 1rem 0 1.25rem;
     padding: .5rem 1rem;
     width: $--default-layout;
-
-    &:active, 
-    &:focus {
-        outline: none !important;
-    }
-    &::placeholder {
-        color: $--black;
-    }
-    &[type="file"] {
-        background: $--input;
-        transition: .5s;
-    
-        &:active, 
-        &:focus, 
-        &:hover {
-            background: $--light-green;
-        }
-    }
-    &[type=text] {
-        font-family: $--secondary-font;
-    }
 }
 
-select {
-    appearance: none;
-    background-color: white;
-    background-image: url('../../assets/icons/dropbtn.svg');
-    background-repeat: no-repeat;
-    background-position-x: 97.5%;
-    background-position-y: 13px;
-    font-family: $--secondary-font !important;
-    padding: .75rem 1rem;
+input[type="file"] {
+    background: $--input;
+}
 
-    option {
-        background: $--box-color;
-        color: $--dark-blue;
-        font-size: 15px;
-    }
+input[type="file"]:active, input[type="file"]:focus {
+    background: $--light-green;
+}
+
+input[type=text] {
+    font-family: $--secondary-font;
+}
+
+input:active, input:focus {
+    outline: none !important;
+}
+
+label {
+    font-weight: bold;
+}
+
+.message-sent {
+    background: $--success;
+    color: white;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 1.25rem;
+    margin-bottom: 3rem;
+    padding: 1.6rem;
+}
+
+// CONTACT FORM
+#first_name {
+    width: 110%;
+}
+
+.reqdot {
+    color: $--required;
+    font-weight: bold;
+}
+
+.rowform {
+    display: flex;
+    flex-direction: row;
+    gap: 4rem;
 }
 
 textarea {
@@ -100,13 +105,55 @@ textarea {
     resize: none;
 }
 
-@media only screen and (max-width: getScreenSize(mobile-width)) {
+select {
+    font-family: $--secondary-font !important;
+}
+
+// ADMIN FORM
+.file-input {
+    color: transparent;
+    cursor: pointer;
+}
+
+.file-input::before {
+    color: $--blue;
+    content: url('../../assets/icons/upload.png');
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    margin: .75rem 0 -1rem;
+}
+
+.file-input::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+select {
+    appearance: none;
+    background-image: url('../../assets/icons/dropbtn.svg');
+    background-repeat: no-repeat;
+    background-position-x: 97.5%;
+    background-position-y: 13px;
+    padding: .75rem 1rem;
+}
+
+option {
+    background: $--box-color;
+    color: $--dark-blue;
+    font-size: 14px;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: $--mobile-screen) {
+    #first_name {
+        width: 100% !important;
+    }
     form {
         max-width: 500px;
-
-        .rowform {
-            flex-direction: column;
-            gap: 0 !important;
-        }
+    }
+    .rowform {
+        flex-direction: column;
+        gap: 0 !important;
     }
 }
