--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -1,148 +1,110 @@
 .main-nav {
-    height: 90px;
+  height: 90px;
+  // hide hamburger menu on desktop- and laptop view 
+  #check {
+    display: none;
   }
-  
-  .logo {
-    color: $--dark-blue;
-    line-height: 90px;
-    font-family: $--primary-font;
-    font-size: 2rem;
-    font-weight: bold;
-    text-decoration: none;
-    margin-left: 30px;
-    transition: .5s;
-  }
+}
 
-  .logo:hover {
+/* HAMBURGER MENU */
+.menu-btn {
+  color: white;
+  display: none;
+  float: right;
+  font-size: 25px;
+  line-height: 90px;
+  margin-right: 40px;
+
+  // hamburger menu color
+  svg path {
+    stroke: $--dark-blue;
+  }
+}
+
+/* NAME TAG */
+.logo {
+  color: $--dark-blue;
+  font-family: $--primary-font;
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 90px;
+  margin-left: 30px;
+  text-decoration: none;
+  transition: .5s;
+
+  &:hover {
     color: $--link-blue;
   }
+}
   
-  .navlinks {
-    list-style: none;
-    float: right;
-    line-height: 90px;
-    margin-right: 30px;
-    padding: 0;
-  }
-  
-  .navlinks li {
+/* NAVBAR */
+.navlinks {
+  float: right;
+  line-height: 90px;
+  list-style: none;
+  margin-right: 30px;
+  padding: 0;
+
+  li {
     display: inline-block;
     margin: 0px 20px;
   }
-  
-  .navlinks li a {
+  li a {
     color: $--blue;
     text-decoration: none;
     font-size: 18px;
     transition: all 0.3s linear 0s;
-  }
-  
-  .navlinks li a:focus, .navlinks li a:hover {
-    color: $--link-blue;
-    padding-bottom: 8px;
-    border-bottom: 2px solid $--dark-blue;
-  }
-  
-  #check {
-    display: none;
-  }
-  
-  .menu-btn {
-    font-size: 25px;
-    color: white;
-    float: right;
-    line-height: 90px;
-    margin-right: 40px;
-    display: none;
-    cursor: pointer;
-  }
 
-/* LOGIN | LOGOUT BUTTON */
-.logbtn {
-  background: $--blue;
-  color: white !important;
-  font-size: 14px !important;
-  letter-spacing: .2rem;
-  padding: .75rem 1.5rem;
-  text-transform: uppercase;
-}
-
-.logbtn:focus, .logbtn:hover {
-  background: $--black;
-  border-bottom: 0 !important;
-  padding-bottom: .75rem !important;
-}
-  
-  @media (max-width: $--laptop-screen) {
-    .navlinks li a:hover {
-        color: white;
-      }
-    .logo {
-        font-size: 1.75rem;
-      }
-
-    .navlinks {
-      padding: 1rem 2rem 0;
-      position: absolute;
-      width: 100%;
-      height: 100vh;
-      transition: all 0.5s;
-      left: -100%;
-      line-height: 3.5rem;
-      background: $--blue;
-      z-index: 999;
+    &:focus, 
+    &:hover {
+      color: $--link-blue;
+      padding-bottom: 8px;
+      border-bottom: 2px solid $--dark-blue;
     }
+  }
+}
   
-    .navlinks li {
+@media (max-width: getScreenSize(laptop-width)) {
+  // hamburger menu position 
+  #check:checked ~ .navlinks {
+    left: 0;
+  }
+  .logo {
+    font-size: 1.75rem;
+  }
+  .menu-btn {
+    display: block;
+  }
+  .navlinks {
+    background: $--blue;
+    height: 100vh;
+    left: -100%;
+    line-height: 3.5rem;
+    padding: 1rem 2rem 0;
+    position: absolute;
+    transition: all 0.5s;
+    width: 100%;
+    z-index: 999;
+
+    li {
       display: block;
       margin: 0;
     }
-  
-    .navlinks li a {
-        color: white;
-      font-size: 20px;
-    }
-  
-    .navlinks li a:hover {
-      border-bottom: none;
-    }
-  
-    .menu-btn {
-      display: block;
-    }
-  
-    #check:checked ~ .navlinks {
-      left: 0;
-    }
-
-    .logbtn {
-      background: $--black;
-    }
-  }
-  
-  @media (max-width: $--mobile-screen) {
-    .logo {
-      margin-left: 25px;
-      font-size: 1.5rem;
-    }
-  
-    .menu-btn {
-      margin-right: 25px;
-    }
-  
-    .menu-btn:focus {
+    li a {
       color: white;
+      font-size: 20px;
+
+      &:hover {
+        border-bottom: none;
+        color: white;
+      }
     }
   }
+}
   
-  svg path {
-      stroke: $--dark-blue;
+@media (max-width: getScreenSize(mobile-width)) {
+  .logo {
+    margin-left: 25px;
+    font-size: 1.5rem;
   }
-
-// ADMIN 
-.dashboard {
-    background: $--light-green;
-    color: $--green;
-    margin-bottom: 1rem;
-    padding: 1rem 2rem 3rem;
 }
