--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,5 @@
 @import "partials/ui/buttons";
 @import "partials/ui/enquiry";
 @import "partials/ui/loader";
+@import "partials/ui/messages";
 @import "partials/ui/searchbar";
