--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "partials/typography";
 
 /* UI components */
+@import "partials/about";
 @import "partials/ui/buttons";
 @import "partials/ui/enquiry";
 @import "partials/ui/loader";
