--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -1,92 +1,88 @@
 .about {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    gap: 9rem;
-    justify-content: center;
-    margin: 0rem 0rem 4rem;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 9rem;
+  justify-content: center;
+  margin: 0rem 0rem 4rem;
+}
+  
+.bio {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+  
+.portrait {
+  height: 275px;
+  object-fit: cover;
+  width: 200px;
+}
+  
+.signature {
+  margin-bottom: 2.5rem;
+  width: 125px;
+}
+  
+.what, .who {
+  margin-bottom: 4rem;
+}
+  
+/* HOME - ABOUT SECTION*/
+.welcome {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  hr {
+    width: 75px;
   }
-  
-  .bio {
-    margin: 0 auto;
-    max-width: 1000px;
-  }
-  
-  .portrait {
-    height: 275px;
-    object-fit: cover;
-    width: 200px;
-  }
-  
-  .signature {
-    margin-bottom: 2.5rem;
-    width: 125px;
-  }
-  
-  .what, .who {
-    margin-bottom: 4rem;
-  }
-  
-  @media (max-width: getScreenSize(tablet-width)) {
-    .about {
-      gap: 3rem;
-    }
-  } 
-  
-  @media (max-width: getScreenSize(mobile-width)) {
-    .about {
-      align-items: unset;
-      flex-direction: column;
-      gap: 2rem;
-      margin: 0rem 0rem 4rem;
-    }
-    .intro:first-child {
-      order: 2;
-    }
-    .portrait {
-      height: 100%;
-      width: 100%;
-    }
-  }
-  
-  /* HOME - ABOUT SECTION*/
-  .welcome {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  
   .txt {
     background: $--box-color;
     color: $--green;
     padding: 2rem 2rem 0rem;
   }
+}
   
-  hr {
-    width: 75px;
+.sub h2 {
+  line-height: 1.25rem;
+}
+  
+@media (max-width: getScreenSize(tablet-width)) {
+  .about {
+      gap: 3rem;
   }
-  
-  .sub h2 {
-    line-height: 1.25rem;
+    .img img {
+      width: 100% !important;
   }
-  
-  @media (max-width: getScreenSize(tablet-width)) {
+  .welcome {
+    flex-direction: column-reverse;
+    margin: 2rem auto 2rem !important;
+
     hr {
       margin-bottom: 2rem;
     }
-    .welcome {
-      flex-direction: column-reverse;
-      margin: 2rem auto 2rem !important;
-    }
-    .img img {
-      width: 100% !important;
-    }
-    .sub h2 {
-      line-height: 30px;
-      margin-bottom: 0;
-    }
     .txt {
-      padding-bottom: 4rem;
+      padding-bottom: 2rem;
     }
   }
-  
+  .sub h2 {
+    line-height: 30px;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: getScreenSize(mobile-width)) {
+  .about {
+    align-items: unset;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 0 0 3rem;
+  }
+  .intro:first-child {
+    order: 2;
+  }
+  .portrait {
+    height: 100%;
+    width: 100%;
+  }
+}
