--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -26,7 +26,7 @@
 
     &#active {
         background: $--green;
-        color: white;
+        color: get(pure-white);
         display: block;
         font-weight: normal;
         padding: 1rem;
