--- a/src/sass/partials/ui/_messages.scss
+++ b/src/sass/partials/ui/_messages.scss
@@ -17,7 +17,7 @@
 /* SUCCESSFUL FORM MESSAGE */
 .message-sent {
     background: $--success;
-    color: white;
+    color: get(pure-white);
     font-size: 15px;
     letter-spacing: 1px;
     line-height: 1.25rem;
