--- a/src/sass/partials/_dashboard.scss
+++ b/src/sass/partials/_dashboard.scss
@@ -20,8 +20,8 @@
     width: 100%;
 
     &:hover {
-        background: $--box-color;
-        color: $--dark-blue;
+        background: get(box-color);
+        color: get(hover-color);
     }
 
     &#active {
@@ -56,7 +56,7 @@
 }
 
 .note, .message-box {
-    background: $--box-color;
+    background: get(box-color);
     margin-top: 2rem;
     padding: 1.5rem 2rem 3rem;
 }
