--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,8 @@
 @import "partials/base";
 @import "partials/dashboard";
-@import "partials/footer";
 @import "partials/forms";
 @import "partials/gallery";
 @import "partials/layout";
-@import "partials/messages";
 @import "partials/nav";
 @import "partials/slider";
 @import "partials/typography";
@@ -13,6 +11,7 @@
 @import "partials/about";
 @import "partials/ui/buttons";
 @import "partials/ui/enquiry";
+@import "partials/ui/footer";
 @import "partials/ui/loader";
 @import "partials/ui/messages";
 @import "partials/ui/searchbar";
